Add names to urls

--- a/frikr/templates/base.html
+++ b/frikr/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <nav>
-        <a href="/">Home</a>
+        <a href="{% url 'photos_home' %}">Home</a>
     </nav>
     <hr>
     <section>
