--- a/frikr/templates/base.html
+++ b/frikr/templates/base.html
@@ -9,6 +9,8 @@
         <a href="{% url 'photos_home' %}">Home</a>
         |
         {% if user.is_authenticated %}
+            <a href="{% url 'photo_create' %}">Crear foto</a>
+            |
             <a href="{% url 'users_logout' %}">Salir</a>
         {% else %}
             <a href="{% url 'users_login' %}">Entrar</a>
